schema/testdata/validation_unique_input_bare_model/schema.keel
model Author {
}

model Book {
    fields {
        author Author @unique
    }

    operations {
        get getByAuthor(author)
    }
}
